force-app/main/default/objects/dataVariousDeductibles__c/dataVariousDeductibles__c.object-meta.xml
<CustomObject>
    <label>Various Deductibles</label>
    <nameField>
        <label>Various Deductibles</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Various Deductibles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>