force-app/main/default/objects/dataVariousDeductibles__c/fields/bar__c.field-meta.xml
<CustomField>
    <fullName>bar__c</fullName>
    <label>bar</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>