force-app/main/default/objects/dataVariousDeductibles__c/fields/blkM__c.field-meta.xml
<CustomField>
    <fullName>blkM__c</fullName>
    <label>blkM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>