force-app/main/default/objects/dataVariousDeductibles__c/fields/debi__c.field-meta.xml
<CustomField>
    <fullName>debi__c</fullName>
    <label>debi</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>