force-app/main/default/objects/dataVariousDeductibles__c/fields/dep__c.field-meta.xml
<CustomField>
    <fullName>dep__c</fullName>
    <label>dep</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>