force-app/main/default/objects/dataVariousDeductibles__c/fields/ppd__c.field-meta.xml
<CustomField>
    <fullName>ppd__c</fullName>
    <label>ppd</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>