force-app/main/default/objects/dataVariousDeductibles__c/fields/resn__c.field-meta.xml
<CustomField>
    <fullName>resn__c</fullName>
    <label>resn</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>