force-app/main/default/objects/dataVariousDeductibles__c/fields/rue__c.field-meta.xml
<CustomField>
    <fullName>rue__c</fullName>
    <label>rue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>