force-app/main/default/objects/dataVariousDeductibles__c/fields/sch__c.field-meta.xml
<CustomField>
    <fullName>sch__c</fullName>
    <label>sch</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>