force-app/main/default/objects/dataVariousDeductibles__c/fields/vou__c.field-meta.xml
<CustomField>
    <fullName>vou__c</fullName>
    <label>vou</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>